# script_policy

./: .gitignore  NEW_GUIDE.md  README.md
.codex/: CURRENT_STATE.md  FM_FIRST_GRASP_STACK_PLAN.md  LEFT_ARM_PLANNER_GEOMETRY_ANALYSIS_2026-04-16.md  MEMORY.md  OPEN_SOURCE_SCRIPT_POLICY_INDEX.md  PLACE_PARADIGM_ROADMAP_2026-04-17.md  PROJECT_REVIEW_AND_REPAIR_PLAN_2026-04-28.md  PROMPT_RULES.md  README.md  ROBOTWIN_MULTITASK_BENCHMARK_PLAN_2026-04-20.md  ROBOTWIN_PLAN.md  ROBOTWIN_TASK_COMPARISON_2026-04-15.md  SCRIPT_POLICY_PROGRESS_REPORT_2026-04-21.md  TASK_PROMPT_TEMPLATE.md  WORKSPACE.md
arm_control_sdk/python/: build_carm.py  install_carm.py
arm_control_sdk/python/src/: CMakeLists.txt  carm_py.cpp
docs/: HANDOFF_FROM_RL_VLA_2026-04-15.md  ROBOTWIN_ENV_SETUP.md  SCRIPT_POLICY_PLATFORM_PLAN_FROM_RL_VLA.md
references/rl_vla/carm_ros_deploy/src/carm_deploy/: CMakeLists.txt  README.md  package.xml  safety_config.json
references/rl_vla/carm_ros_deploy/src/carm_deploy/config/: default.yaml
references/rl_vla/carm_ros_deploy/src/carm_deploy/core/: __init__.py  camera_config.py  env_ros.py  safety_controller.py
references/rl_vla/carm_ros_deploy/src/carm_deploy/data/: __init__.py  analyze_dataset.py  record_data_ros.py  teleop_bridge.py  teleop_shadow_ros.py  teleop_shadow_utils.py
references/rl_vla/carm_ros_deploy/src/carm_deploy/docs/: chunk_timeline_analysis_report.md  network_proxy_setup.md
references/rl_vla/carm_ros_deploy/src/carm_deploy/docs/_archive/: ACTION_POSTPROCESSING_PIPELINE.md
references/rl_vla/carm_ros_deploy/src/carm_deploy/inference/: LOG_FORMAT.md  __init__.py  analyze_inference_data.py  hitl_bridge.py  inference_logger.py  inference_recorder.py  inference_ros.py  policy_loader.py
references/rl_vla/carm_ros_deploy/src/carm_deploy/launch/: camera.launch  dual_camera.launch  full_system.launch  inference.launch  record.launch
references/rl_vla/carm_ros_deploy/src/carm_deploy/tests/: conftest.py  test_action_chunk.py  test_action_normalizer.py  test_action_processor.py  test_backend_control_state.py  test_camera_config.py  test_config.py  test_dry_run.py  test_encode_observations.py  test_gap_fix.py  test_hitl_bridge.py  test_inference_logger.py  test_inference_node.py  test_inference_recorder.py  test_model_factory.py  test_policy_loader.py  test_pose_utils.py  test_safety_controller.py  test_teleop_bridge.py  test_teleop_shadow_utils.py
references/rl_vla/carm_ros_deploy/src/carm_deploy/tools/: __init__.py  analyze_timeline.py  record_workspace.py  verify_safety_config.py
references/rl_vla/carm_ros_deploy/src/carm_deploy/tools/arm_test/: __init__.py  safe_shutdown.py  test_connection.py  test_gripper.py  test_motion.py
references/rl_vla/carm_ros_deploy/src/carm_deploy/utils/: __init__.py  episode_keyboard.py  image_sync.py  paths.py  timeline_logger.py  trajectory_interpolator.py
references/rl_vla/carm_ros_deploy/src/carm_deploy/utils/_archive/: keyboard_intervention.py
script_runtime/: README.md  __init__.py  factory.py  session.py
script_runtime/adapters/: __init__.py  camera_bridge.py  fm_grasp_stack.py  maniskill_bridge.py  perception_adapter.py  rlft_policy_adapter.py  robotwin_bridge.py  ros_bridge.py  sdk_bridge.py
script_runtime/configs/: robotwin_multitask_canary_compare_suite.yaml  robotwin_multitask_complex_probe_suite.yaml  robotwin_multitask_place_fm_backend_compare_suite.yaml  robotwin_multitask_place_fm_compare_suite.yaml  robotwin_multitask_place_suite.yaml
script_runtime/core/: __init__.py  blackboard.py  failure_codes.py  registry.py  result_types.py  skill_base.py  task_base.py
script_runtime/executors/: __init__.py  pytrees_executor.py  trace_replayer.py
script_runtime/place/: __init__.py  closed_loop.py  heuristic.py  module_base.py
script_runtime/planning/: __init__.py  candidate_families.py  grasp_semantics.py  planner_feedback.py
script_runtime/runners/: __init__.py  evaluate_robotwin_fm_guided_stability.py  evaluate_robotwin_multitask_suite.py  inspect_contact_graspnet_backend.py  inspect_fm_grasp_stack.py  inspect_foundationpose_backend.py  maniskill_grasp_sweep.py  maniskill_pick_cube.py  maniskill_validate.py  render_robotwin_realview_summary.py  render_robotwin_skill_snapshots.py  render_robotwin_trace.py  render_validation_report.py  robotwin_capture_replay.py  robotwin_pick_place.py  robotwin_pose_diagnostics.py  run_contact_graspnet_headless.py  run_graspgen_headless.py  run_graspnet_baseline_headless.py  sdk_pick_place.py
script_runtime/safety/: __init__.py  e_stop.py  speed_limits.py  watchdog.py  workspace_limits.py
scripts/: download_contact_graspnet_checkpoints.sh  download_foundationpose_weights.sh  download_robotwin_assets.sh  patch_robotwin_dependencies.py  robotwin_smoke_test.py  setup_contact_graspnet_env.sh  setup_foundationpose_env.sh  setup_robotwin_env.sh
(+85 files in other folders)
