<?xml version="1.0"?>
<package format="2">
  <name>carm_deploy</name>
  <version>1.0.0</version>
  <description>CARM Robot ROS Deployment Package</description>
  
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- ROS 依赖 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  
  <!-- Python 依赖 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-h5py</exec_depend>
  
  <export>
  </export>
</package>
